feat: add room info translator to server side
