# gf-webapp-admin/src/autogenerated/gf-server-api/models/index.ts
@@ -4,6 +4,9 @@ export * from './ApiAskAdminPostRequest';
 export * from './ApiBookingRequestPostRequest';
 export * from './Currency';
 export * from './Customer';
+export * from './Dictionary';
+export * from './English';
+export * from './Georgian';
 export * from './NewRoom';
 export * from './Period';
 export * from './Price';
@@ -12,3 +15,4 @@ export * from './RoomBooked';
 export * from './RoomPaid';
 export * from './RoomServices';
 export * from './RoomType';
+export * from './Russian';
