# gf-webapp/src/autogenerated/gf-server-api/models/Room.ts
@@ -13,6 +13,12 @@
  */
 
 import { exists, mapValues } from '../runtime';
+import type { Dictionary } from './Dictionary';
+import {
+    DictionaryFromJSON,
+    DictionaryFromJSONTyped,
+    DictionaryToJSON,
+} from './Dictionary';
 import type { Price } from './Price';
 import {
     PriceFromJSON,
@@ -140,6 +146,12 @@ export interface Room {
      * @memberof Room
      */
     paid: Array<RoomPaid>;
+    /**
+     * 
+     * @type {Dictionary}
+     * @memberof Room
+     */
+    dictionary: Dictionary;
 }
 
 /**
@@ -162,6 +174,7 @@ export function instanceOfRoom(value: object): boolean {
     isInstance = isInstance && "roomNumber" in value;
     isInstance = isInstance && "booked" in value;
     isInstance = isInstance && "paid" in value;
+    isInstance = isInstance && "dictionary" in value;
 
     return isInstance;
 }
@@ -191,6 +204,7 @@ export function RoomFromJSONTyped(json: any, ignoreDiscriminator: boolean): Room
         'roomNumber': json['roomNumber'],
         'booked': ((json['booked'] as Array<any>).map(RoomBookedFromJSON)),
         'paid': ((json['paid'] as Array<any>).map(RoomPaidFromJSON)),
+        'dictionary': DictionaryFromJSON(json['dictionary']),
     };
 }
 
@@ -218,6 +232,7 @@ export function RoomToJSON(value?: Room | null): any {
         'roomNumber': value.roomNumber,
         'booked': ((value.booked as Array<any>).map(RoomBookedToJSON)),
         'paid': ((value.paid as Array<any>).map(RoomPaidToJSON)),
+        'dictionary': DictionaryToJSON(value.dictionary),
     };
 }
 
