# gf-webapp/src/autogenerated/gf-server-api/models/Russian.ts
@@ -1,0 +1,84 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Golden Fleece API
+ * A simple REST API for providing basic CRUD-access to the employees in a Golden Fleece database.
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface Russian
+ */
+export interface Russian {
+    /**
+     * title of room.
+     * @type {string}
+     * @memberof Russian
+     */
+    title: string;
+    /**
+     * short description of room.
+     * @type {string}
+     * @memberof Russian
+     */
+    description: string;
+    /**
+     * long description of room.
+     * @type {string}
+     * @memberof Russian
+     */
+    descriptionLong: string;
+}
+
+/**
+ * Check if a given object implements the Russian interface.
+ */
+export function instanceOfRussian(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "title" in value;
+    isInstance = isInstance && "description" in value;
+    isInstance = isInstance && "descriptionLong" in value;
+
+    return isInstance;
+}
+
+export function RussianFromJSON(json: any): Russian {
+    return RussianFromJSONTyped(json, false);
+}
+
+export function RussianFromJSONTyped(json: any, ignoreDiscriminator: boolean): Russian {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'title': json['title'],
+        'description': json['description'],
+        'descriptionLong': json['descriptionLong'],
+    };
+}
+
+export function RussianToJSON(value?: Russian | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'title': value.title,
+        'description': value.description,
+        'descriptionLong': value.descriptionLong,
+    };
+}
+
